[package]
    name          = "skyscanner"
    version       = "0.1.0"
    edition       = "2021"
    license       = "MIT OR Apache-2.0"
    repository    = "https://github.com/valyagolev/skyscanner"
    homepage      = "https://github.com/valyagolev/skyscanner"
    description   = "implementation of the Skyscanner Flights live pricing API (3.0)"
    documentation = "https://docs.rs/skyscanner"

[dependencies]
    reqwest      = { version = "0", features = ["json"] }
    serde        = { version = "1", features = ["derive"] }
    serde_json   = "1"
    chrono       = "0"
    once_cell    = "1"
    rust_decimal = "1"
    anyhow       = "1"
    itertools    = "0"
    futures      = "0"

[dev-dependencies]
    tokio = { version = "*", features = ["full"] }
